text style changes

--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -63,10 +63,10 @@
                         <h2>Project Description</h2> <br>
                         <div class="gumProjectDescPClass">
                             <p class="gumProjectContainerTextPClassContainer">
-                            Girlyoumatter.org is a dynamic web platform designed to empower girls during their 
-                            transition from middle school to high school. With a user-friendly interface crafted using HTML, CSS, and JS, the 
-                            site offers a wealth of resources, advice, and support tailored to the unique challenges young girls face during this pivotal time in their lives. 
-                            From academic guidance to self-esteem boosting tips, Girlyoumatter.org aims to foster confidence, resilience, and a sense of belonging as
+                            <a href="https://girlyoumatter.org">Girlyoumatter.org</a> is a dynamic web platform designed to <strong>empower</strong> girls during their 
+                            transition from middle school to high school. With a <strong>user-friendly</strong> interface crafted using HTML, CSS, and JS, the 
+                            site offers a wealth of resources, advice, and support tailored to the unique <strong>challenges</strong> young girls face during this pivotal time in their lives. 
+                            From academic guidance to self-esteem boosting tips, Girlyoumatter.org aims to <strong>foster</strong> confidence, resilience, and a sense of belonging as
                             girls embark on their high school journey. Click on one of the images below to get a better look.
                         </p>
                         </div>
