changing font styles, weight and color

--- a/acmproject.html
+++ b/acmproject.html
@@ -12,6 +12,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--For the header & logo-->
@@ -63,12 +66,13 @@
             <div class="acmProjectDescContentContainer">
                 <h2>Project Description</h2><br> <!--Header-->
                 <div class="acmProjectDescContentContainerText">
-                    <p>Are you a student struggling to attract attendees for your organization's events through posters and Instagram posts?
+                    <p>Are you a student <strong>struggling</strong> to attract attendees for your organization's events through posters and Instagram posts?
                          Do you often miss out on exciting campus events because you only learn about them after they've concluded? 
-                         ExpertEvents enables organizers to promote events to the entire student population.
+                         <span class="expertEvents">ExpertEvents</span> enables organizers to promote events to the entire student population.
                           It allows students to stay informed about campus happenings, effortlessly notifying and inviting friends. 
                           Engage in discussions through our in-app community space, and seamlessly integrate events with your calendar app.
-                           ExpertEvents keeps you in the loop with real-time notifications. Join ExpertEvents today, where events come to life, and the UTD campus community thrives.
+                          <span class="expertEvents">ExpertEvents</span> keeps you in the loop with real-time notifications. Join <span class="expertEvents">ExpertEvents</span> 
+                          today, where events come to life, and the UTD campus community thrives.
                            Skip to <span class="acmTime">1:43:47</span> to see our presentation.
                     </p> <!--Container for the text itself-->
                 </div>
@@ -118,10 +122,11 @@
             <div class="acmProjectDescContentContainer">
                 <h2>Expert Events</h2><br> <!--Header-->
                 <div class="acmProjectDescContentContainerText">
-                    <p>Shruti Gupta, one of our talented front-end team member, meticulously crafted a comprehensive video walkthrough of our app. This video, originally featured in the slides, is now conveniently available here for your viewing pleasure.
-                        Join us on a journey through the intricacies of our application, exploring its myriad features and seamless user experience. From sleek design elements to innovative functionalities, our app is a testament to our commitment to excellence.
+                    <p><a href="https://www.linkedin.com/in/shruti-gupta-28a015290">Shruti Gupta</a>, one of our <strong>talented</strong> front-end team member, meticulously crafted a comprehensive video walkthrough of our app.
+                         This video, originally featured in the slides, is now conveniently available here for your viewing pleasure.
+                        Join us on a journey through the intricacies of our application, exploring its myriad features and seamless user experience. From <strong>sleek</strong> design elements to innovative functionalities, our app is a testament to our commitment to excellence.
                         
-                        Sit back, relax, and immerse yourself in the awesomeness of our app as you follow Shruti's expert guidance through this captivating video tour. Welcome to a world where innovation thrives and user satisfaction reigns supreme.
+                        Sit back, relax, and immerse yourself in the awesomeness of our app as you follow Shruti's expert guidance through this<strong> captivating</strong> video tour. Welcome to a world where innovation thrives and user satisfaction reigns supreme.
                     </p> <!--Container for the text itself-->
                 </div>
             </div>
@@ -150,10 +155,14 @@
             <div class="acmProjectDescContentContainer">
                 <h2>Expert Events</h2><br> <!--Header-->
                 <div class="acmProjectDescContentContainerText">
-                    <p>Prepare to be dazzled by our exceptional cast: Dhruv Tripathi, Charu Yuvaraj, Shruti Gupta, and Sifat Islam. Their performances have elevated our project to new heights, 
-                        each bringing their own unique charisma and skill to the stage. From Dhruv's magnetic presence to Charu's captivating delivery, from Shruti's precision to Sifat's versatility, 
+                    <p>Prepare to be <strong>dazzled</strong> by our exceptional cast: 
+                        <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, 
+                        <a href="https://www.linkedin.com/in/charumitha-y/">Charu Yuvaraj</a>, 
+                        <a href="https://www.linkedin.com/in/shruti-gupta-28a015290">Shruti Gupta</a>, and 
+                        <a href="https://www.linkedin.com/in/sifat-islam">Sifat Islam</a>. Their performances have elevated our project to new heights, 
+                        each bringing their own unique <strong>charisma</strong> and skill to the stage. From Dhruv's magnetic presence to Charu's captivating delivery, from Shruti's precision to Sifat's versatility, 
                         their collective talent shines brightly in every scene. 
-                        Join us as we celebrate their contributions to our skit, where their artistry transforms our vision into an unforgettable experience for all who witness it.                        <!--Container for the text itself-->
+                        Join us as we celebrate their contributions to our skit, where their <strong>artistry</strong> transforms our vision into an unforgettable experience for all who witness it.                        <!--Container for the text itself-->
                 </div>
             </div>
         </div>
