--- a/girlyoumatter.html
+++ b/girlyoumatter.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="CSSComponents/acmproject.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="lightboxJS.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--https://github.com/UTDallasEPICS/Soccer-Robot-Web-->
