--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="CSSComponents/normalize.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <!--For the header & logo-->
@@ -107,9 +111,13 @@
                     <h1>What are these projects?</h1>
                     <div class="infoContainerTextPClass">
                         <p class="infoContainerTextPClassContainer">
-                            These projects represent a diverse spectrum of innovation and collaboration. GirlYouMatter.org is a 
-                            platform dedicated to advocating for girls globally, while ACM Projects focuses on mobile development using 
-                            Flutter and Firebase. CodePath dives into mobile app creation with XML and Kotlin, and UT Design EPICS delves into robotics, employing 
+                            These projects represent a <strong>diverse</strong> spectrum of innovation and collaboration. 
+                            <a href="girlyoumatter.html">Girlyoumatter.org</a> is a 
+                            platform dedicated to advocating for girls globally, while 
+                            <a href="acmproject.html">ACM Projects</a> focuses on mobile development using 
+                            Flutter and Firebase. 
+                            <a href="codepath.html">CodePath</a> dives into mobile app creation with XML and Kotlin, and 
+                            <a href="epics.html">UT Design EPICS</a> delves into robotics, employing 
                             Vue, HTML, Nuxt, and PRISMA to build a competitive soccer robot. Each project embodies a unique blend of creativity, technology, and purpose, 
                             showcasing the boundless possibilities of modern design and engineering.
                         </p>
