--- a/codepath.html
+++ b/codepath.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
     <link rel="stylesheet" href="CSSComponents/codepath.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
         <!--For the header & logo-->
@@ -61,10 +65,10 @@
                         <div class="gumProjectDescPClass">
                             <p class="gumProjectContainerTextPClassContainer">
                                 Codepath: Introduction to Android Development is a comprehensive course aimed at 
-                                providing learners with foundational skills in Android app development. Throughout the course, participants will 
+                                providing learners with foundational skills in <strong>Android app development</strong>. Throughout the course, participants will 
                                 explore essential topics through a series of mini units. These units include mastering the RecyclerView for 
                                 efficient data display, understanding core components such as activities and fragments, and gaining 
-                                proficiency in XML for designing user interfaces. Each unit features hands-on coding exercises and guided
+                                proficiency in XML for designing user interfaces. Each unit features <strong>hands-on</strong> coding exercises and guided
                                  projects to reinforce learning. By completing this project, participants will have the fundamental knowledge 
                                  and confidence to embark on their own Android app development journeys.
                         </p>
