--- a/epics.html
+++ b/epics.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
 </head>
 <body>
         <!--For the header & logo-->
@@ -66,11 +70,11 @@
                     <h1>What is EPICS?</h1>
                     <div class="epicsTextContainerPClass">
                         <p class="epicsContainerTextPClassContainer">
-                            UTDesign® EPICS is a service learning program at UT Dallas that pairs students with non-profit organizations to 
-                            tackle real-world challenges. Through hands-on projects, students apply their engineering skills to address community needs, 
-                            from healthcare to environmental sustainability. Under faculty guidance, students develop innovative solutions, gaining practical
+                            <a href="https://epics.utdallas.edu/">UTDesign® EPICS</a> is a service learning program at UT Dallas that pairs students with non-profit organizations to 
+                            tackle real-world challenges. Through <strong>hands-on</strong> projects, students apply their engineering skills to address community needs, 
+                            from healthcare to environmental sustainability. Under faculty guidance, students develop <strong>innovative</strong> solutions, gaining practical
                              experience and fostering social responsibility. By collaborating with community partners, UTDesign® EPICS empowers students to 
-                             make a tangible impact while honing valuable teamwork and problem-solving skills.
+                             make a tangible impact while honing valuable <strong>teamwork</strong> and <strong>problem-solving</strong> skills.
                         </p>
                     </div>
                 </div>
@@ -89,10 +93,10 @@
                     <h1>Project Description</h1>
                     <div class="infoContainerTextPClass">
                         <p class="infoContainerTextPClassContainer">
-                            Our EPICS project focused on creating a viewing experience of a live soccer robot competition by developing a user interface (UI) reminiscent of popular streaming 
+                            Our EPICS project focused on creating a viewing experience of a <strong>live soccer robot competition</strong> by developing a user interface (UI) reminiscent of popular streaming 
                             platforms like Twitch. Leveraging technologies such as Vue.js, NUXT.js, Prisma, and HTML, we designed an intuitive and interactive interface that allowed
-                             users to seamlessly stream and engage with live matches featuring two soccer robots. Our solution not only provided a platform for spectators 
-                             to enjoy the action but also showcased the capabilities of modern web development tools in creating immersive experiences for emerging sports technologies
+                             users to <strong>seamlessly</strong> stream and engage with live matches featuring two soccer robots. Our solution not only provided a platform for spectators 
+                             to enjoy the action but also showcased the capabilities of modern web development tools in creating <strong>immersive </strong>experiences for emerging sports technologies
                         </p>
                     </div>
                 </div>
