--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    
 </head>
 <body>
     <!-- <div class="wrapperBox">
@@ -103,11 +108,11 @@
                     <div class="content">
                         <p class="about-text">
                             Hey there, I'm <a href="https://www.linkedin.com/in/dhruv-tripathi-2a663227a/">Dhruv Tripathi</a>, a Computer Science undergraduate at the
-                             University of Texas at Dallas with plans to graduate in the Spring of 2027. 
+                            <span class="UTD">University of Texas at Dallas</span> with plans to graduate in the Spring of 2027. 
                             My interests lie in software engineering, cybersecurity, and web development, where I'm always eager to explore and innovate. 
                             I'm skilled in Python, Java, HTML, CSS, JavaScript, and XML, and I'm constantly seeking new challenges to expand my skill set. 
-                            Currently, I'm on the lookout for internships that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
-                            Take a peek into my portfolio and explore the diverse range of projects I've crafted with passion and precision.
+                            Currently, I'm on the lookout for <strong>internships</strong> that will allow me to apply my knowledge in real-world scenarios and contribute to exciting projects. 
+                            Take a peek into my portfolio and <strong>explore</strong> the diverse range of projects I've crafted with passion and precision.
                         </p>
                     </div>
                 </div>
