--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="CSSComponents/index.css">
     <link rel="stylesheet" href="CSSComponents/normalize.css">
     <link rel="stylesheet" href="CSSComponents/header.css">
+    <link rel="stylesheet" href="CSSComponents/acmproject.css">
+    <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
+    <link rel="stylesheet" href="CSSComponents/codepath.css">
+    <link rel="stylesheet" href="CSSComponents/contact.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
