--- a/resume.html
+++ b/resume.html
@@ -40,7 +40,7 @@
         </label>
 
         <nav class="navbar">
-            <a href="/index.html" style="--i:0;">Home<span></span></a>
+            <a href="index.html" style="--i:0;">Home<span></span></a>
             <!-- <a href="#" style="--i:1;">About<span></span></a> -->
             <!-- <a href="#" style="--i:2;">Projects<span></span></a> -->
             <a href="resume.html" style="--i:3;">Resume<span></span></a>
