--- a/acmproject.html
+++ b/acmproject.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -64,14 +65,14 @@
 
     <section class="acmProjectDesc"> <!--The whole section-->
         
-        <div class="acmProjectDescContainer"> <!--Container for the video and the text-->
+        <div class="acmProjectDescContainer" > <!--Container for the video and the text-->
 
-            <div class="iframe-container">
+            <div class="iframe-container" data-aos="fade-right" data-aos-duration="500">
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/QEibawPAbCc?si=sWikovq-r-yuAaE9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
 
             <!--Container for the text and header-->
-            <div class="acmProjectDescContentContainer">
+            <div class="acmProjectDescContentContainer" data-aos="fade-left" data-aos-duration="500">
                 <h2>Project Description</h2><br> <!--Header-->
                 <div class="acmProjectDescContentContainerText">
                     <p>Are you a student <strong>struggling</strong> to attract attendees for your organization's events through posters and Instagram posts?
@@ -529,6 +530,14 @@
             </a>
         </div>
     </section>
+
+    <!--For linking of JavaScript-->
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js"></script>
+    <script src="app.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
 
 </body>
 </html>
