--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 
+    <link rel="shortcut icon" type="x-icon" href="images/DTLogo2.png">
+
     <!--Prolly a better way to do this :/-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
