added better styling

--- a/epics.html
+++ b/epics.html
@@ -86,7 +86,8 @@
                             tackle real-world challenges. Through <strong>hands-on</strong> projects, students apply their engineering skills to address community needs, 
                             from healthcare to environmental sustainability. Under faculty guidance, students develop <strong>innovative</strong> solutions, gaining practical
                              experience and fostering social responsibility. By collaborating with community partners, UTDesign® EPICS empowers students to 
-                             make a tangible impact while honing valuable <strong>teamwork</strong> and <strong>problem-solving</strong> skills.
+                             make a tangible impact while honing valuable <strong>teamwork</strong> and <strong>problem-solving</strong> skills. Click here to view
+                             the <a href="https://sites.utdallas.edu/epics-soccer-robot/">EPICS Soccer Robot Website</a>
                         </p>
                     </div>
                 </div>
