--- a/projects.html
+++ b/projects.html
@@ -117,7 +117,7 @@
         <div class="infoContainer">
             <div class="infoContainerRow">
                 <div class="infoImageContainer" data-aos="fade-right" data-aos-duration="1000">
-                    <img src="images/programminglanguagesicon.jpg">
+                    <img src="images/SWEimage2.jpg">
                 </div>
                 <div class="infoContainerText" data-aos="fade-left" data-aos-duration="2000">
                     <h1>What are these projects?</h1>
