--- a/projects.html
+++ b/projects.html
@@ -75,7 +75,7 @@
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-left" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="girlyoumatter.html"><img src="images/girlyoumatter-logo.png" alt="">
+                            <a href="girlyoumatter.html"><img class="boxImage" src="images/girlyoumatter-logo.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-down" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="acmproject.html"><img src="images/acmutd.jpg" alt=""></a>
+                            <a href="acmproject.html"><img class="boxImage" src="images/acmutd.jpg" alt=""></a>
                         </div>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="epics.html"><img src="images/epicslogo-removebg-preview.png" alt="">
+                            <a href="epics.html"><img class="boxImage"  src="images/epicslogo-removebg-preview.png" alt="">
                             </a>
                         </div>
                     </div>
@@ -101,8 +101,17 @@
                 <div class="hoveringContainer">
                     <div class="outterimgwrap" data-aos="fade-right" data-aos-duration="2000">
                         <div class="imgwrap">
-                            <a href="codepath.html"><img src="images/codepathlogo.jpg" alt="">
+                            <a href="codepath.html"><img class="boxImage" src="images/codepathlogo.jpg" alt="">
                             </a>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="hoveringContainer">
+                    <div class="outterimgwrap" data-aos="fade-up" data-aos-duration="2000">
+                        <div class="imgwrap">
+                            <a href="nasaproject.html"><img class="boxImage" src="images/nasaMICRO.jpg" alt="">
+                            </a>                            
                         </div>
                     </div>
                 </div>
