--- a/nasaproject.html
+++ b/nasaproject.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSSComponents/girlyoumatter.css">
     <link rel="stylesheet" href="CSSComponents/lightbox.css">
     <link rel="stylesheet" href="CSSComponents/acmproject.css">
+    <link rel="stylesheet" href="CSSComponents/nasaproject.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <script src="lightboxJS.js"></script>
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
@@ -67,6 +68,43 @@
                      </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="signSection">
+        <div class="signContainer">
+            <div class="signContainerText">
+                <p class="signContainerTextPClass">
+                    <div class="signContainerImage">
+                        This page is Under Construction
+                        <img src="images/hardhat.png" alt="">
+                    </div>
+                    Come back for more updates
+                </p>
+
+            <div class="moreInfo">
+                <p class="moreInfoContainerPClass">
+                    For more info visit: 
+                    <a href="https://www.nasa.gov/learning-resources/micro-g-neutral-buoyancy-experiment-designteams/">Nasa.gov</a>
+                </p>
+            </div>
+            </div>
+
+            <div class="legoMan">
+                <img src="images/legoMan.png" alt="">
+            </div>
+        </div>
+    </section>
+
+    <section class="backButton">
+        <div class="projectButton">
+            <a href="/projects.html" id="">
+                <span></span>
+                <span></span>
+                <span></span>
+                <span></span>
+                Projects
+            </a>
         </div>
     </section>
 
